--- a/css/MLDWeb.scss
+++ b/css/MLDWeb.scss
@@ -12,7 +12,8 @@ div[id^="DMLBS"].entry {
     box:before {content:"[ BOX NUMBER: "attr(xml,id)" ]";font-family:'Arial Unicode MS', sanserif;font-weight:bold;color:blue}
     MLDFASC>box:first-child {page-break-before:avoid}
 
-    entry {display:block;padding-top:0.2cm;line-height:1.65}
+    /*entry {display:block;padding-top:0.2cm;line-height:1.65}*/
+    entry {display:block;line-height:1.65}
     entry[crossref=true] {display:inline;line-height:1.75}
     entry[crossref=true]+entry[crossref=true] {display:inline} 
     entry[crossref=true]+entry:before {content:""}
@@ -35,11 +36,14 @@ div[id^="DMLBS"].entry {
     ed>v {font-style:normal}
 
     s1 {display:inline}
-    s1[snum] {display:block;padding-top:0.25cm;text-indent:0.5cm;line-height:1.65}
+    /*s1[snum] {display:block;padding-top:0.25cm;text-indent:0.5cm;line-height:1.65}*/
+    s1[snum] {display:block;padding-top:0.25cm;text-indent:0.5cm;line-height:1.3} /* 1.65 was too much */
 
     addinfo>v {font-style:italic}
 
-    q1 {display:block;text-indent:0.5cm;padding-top:0.1cm;font-size:90%;line-height:1.65}
+    /*q1 {display:block;text-indent:0.5cm;padding-top:0.1cm;font-size:90%;line-height:1.65}*/
+    q1 {display:block;text-indent:0.5cm;padding-top:0.1cm;font-size:90%;line-height:1.3} /* 1.65 was too much */
+    q1 * {font-size:0.9rem} /* Only way font-size would work on children */
 
     qt[checkingnotes]:after {content:" { "attr(location)" "attr(checkingnotes)"}";font-family:'Arial Unicode MS', sanserif;color:red}
 
